// ====================================================================
// HISTORY
// VERSION : 1.1.2 : FA : #7453 : 07/08/2017 : Move adapters folder in client folder
// END-HISTORY
// ====================================================================

// Produced by Acceleo JavaScript Generator 1.1.2
import "../ccsds_mal/STRING.proto";
import "../ccsds_mal/UINTEGER.proto";
import "./Pus014ForwardedPacket.proto";


package pusGroundModel.protobuf;

message Pus014HkOrDiagPacket {
extensions 5 to 105;

  optional ccsds_mal.protobuf.UINTEGER subsamplingRatio = 1;
  optional ccsds_mal.protobuf.UINTEGER sid = 2;
  optional pusGroundModel.protobuf.Pus014ForwardedPacket pus014ForwardedPacket = 3;
  optional ccsds_mal.protobuf.STRING sidLabel = 4;
}
